@@ -62,10 +62,11 @@ class LuaMatShader {
 		};
 
 	public:
-		void Finalize();
+		void Finalize() { openglID *= (type == LUASHADER_GL); }
 		void Execute(const LuaMatShader& prev, bool deferredPass) const;
 		void Print(const std::string& indent, bool isDeferred) const;
 
+		// only accepts custom programs
 		void SetCustomTypeFromID(unsigned int id) {
 			if ((openglID = id) == 0) {
 				type = LuaMatShader::LUASHADER_NONE;
@@ -73,6 +74,7 @@ class LuaMatShader {
 				type = LuaMatShader::LUASHADER_GL;
 			}
 		}
+		// only accepts engine programs
 		void SetEngineTypeFromKey(const char* key) {
 			switch (hashStringLower(key)) {
 				case hashStringLower("3DO"): { type = LUASHADER_3DO ; } break;
@@ -88,6 +90,7 @@ class LuaMatShader {
 		bool operator == (const LuaMatShader& mt) const = delete;
 		bool operator != (const LuaMatShader& mt) const = delete;
 
+		// both passes require a (custom or engine) shader
 		bool ValidForPass(Pass pass) const { return (pass != LUASHADER_PASS_DFR || type != LUASHADER_NONE); }
 
 		bool IsCustomType() const { return (type == LUASHADER_GL); }
@@ -101,15 +104,77 @@ class LuaMatShader {
 
 /******************************************************************************/
 
+struct LuaMatUniform {
+	char name[32];
+	union {
+		int i[32];
+		float f[32];
+	} data;
+
+	// GL_INT or GL_FLOAT_*
+	int type = 0;
+	// number of data elements
+	int size = 0;
+
+	// -3 := empty uniform, -2 := loc not set, -1 := loc invalid
+	mutable int loc = -3;
+};
+
 struct LuaMatUniforms {
 public:
+	LuaMatUniforms() {
+		ClearObjectUniforms(LUAOBJ_UNIT   );
+		ClearObjectUniforms(LUAOBJ_FEATURE);
+	}
+
 	void Print(const std::string& indent, bool isDeferred) const;
 	void Parse(lua_State* L, const int tableIdx);
 	void AutoLink(LuaMatShader* s);
 	void Validate(LuaMatShader* s);
 
 	void Execute() const;
-	void ExecuteInstance(const CSolidObject* o, const float2 alpha) const;
+	void ExecuteInstanceTeamColor(const float4& tc) const { teamColor.Execute(tc); }
+	void ExecuteInstanceMatrices(const CMatrix44f& mm, const std::vector<CMatrix44f>& pms) const {
+		modelMatrix.Execute(mm);
+		pieceMatrices.Execute(pms);
+	}
+
+
+	bool ClearObjectUniforms(int objType) {
+		objectUniforms[objType].clear();
+		objectUniforms[objType].reserve(128);
+		return true;
+	}
+
+	bool ClearObjectUniforms(int objId, int objType) { return (objectUniforms[objType].erase(objId)); }
+	bool ClearObjectUniform(int objId, int objType, const char* name) {
+		const auto iter = objectUniforms[objType].find(objId);
+		const auto pred = [name](const LuaMatUniform& a) { return (strcmp(name, a.name) == 0); };
+
+		if (iter == objectUniforms[objType].end())
+			return false;
+
+		auto& uniformData = iter->second;
+		auto  uniformIter = std::find_if(uniformData.begin(), uniformData.end(), pred);
+
+		if (uniformIter == uniformData.end())
+			return false;
+
+		return (*uniformIter = LuaMatUniform{}, true);
+	}
+
+	bool AddObjectUniform(int objId, int objType, const LuaMatUniform& u) {
+		const auto pred = [](const LuaMatUniform& a) { return (a.loc == -3); };
+
+		auto& uniformData = objectUniforms[objType][objId];
+		auto  uniformIter = std::find_if(uniformData.begin(), uniformData.end(), pred);
+
+		if (uniformIter == uniformData.end())
+			return false;
+
+		return (*uniformIter = u, true);
+	}
+
 
 	static int Compare(const LuaMatUniforms& a, const LuaMatUniforms& b);
 
@@ -131,8 +196,17 @@ private:
 	template<typename Type> struct UniformMat : public IUniform {
 	public:
 		bool CanExec() const { return (loc != GL_INVALID_INDEX); }
-		bool Execute(const Type val) const { return (CanExec() && RawExec(val)); }
-		bool RawExec(const Type val) const { glUniformMatrix4fv(loc, 1, GL_FALSE, val); return true; }
+		bool Execute(const Type& val) const { return (CanExec() && RawExec(val)); }
+		bool RawExec(const Type& val) const { glUniformMatrix4fv(loc, 1, GL_FALSE, val); return true; }
+
+		GLenum GetType() const { return GL_FLOAT_MAT4; }
+	};
+
+	template<typename Type> struct UniformMatArray : public IUniform {
+	public:
+		bool CanExec() const { return (loc != GL_INVALID_INDEX); }
+		bool Execute(const Type& val) const { return (CanExec() && RawExec(val)); }
+		bool RawExec(const Type& val) const { glUniformMatrix4fv(loc, val.size(), GL_FALSE, val[0]); return true; }
 
 		GLenum GetType() const { return GL_FLOAT_MAT4; }
 	};
@@ -175,6 +249,9 @@ private:
 	spring::unsynced_map<std::string, IUniform*> GetEngineNameUniformPairs();
 
 public:
+	// per-{unit,feature} custom uniforms set via LuaObjectRendering
+	spring::unsynced_map<int, std::array<LuaMatUniform, 16>> objectUniforms[2];
+
 	UniformMat<CMatrix44f> viewMatrix;
 	UniformMat<CMatrix44f> projMatrix;
 	UniformMat<CMatrix44f> viprMatrix;
@@ -185,6 +262,8 @@ public:
 	UniformMat<CMatrix44f> shadowMatrix;
 	UniformVec<float4> shadowParams;
 
+	UniformVec<float4> teamColor;
+
 	UniformVec<float3> camPos;
 	UniformVec<float3> camDir;
 	UniformVec<float3> sunDir;
@@ -192,59 +271,63 @@ public:
 
 	mutable UniformInt<         int> simFrame;
 	mutable UniformInt<unsigned int> visFrame;
-
-public:
-	UniformVec<float4> teamColor;
 };
 
 
 class LuaMaterial {
-	public:
-		LuaMaterial() = default;
-		LuaMaterial(LuaMatType matType): type(matType) {}
+public:
+	LuaMaterial() = default;
+	LuaMaterial(LuaMatType matType): type(matType) {}
 
-		void Parse(
-			lua_State* L,
-			const int tableIdx,
-			void(*ParseShader)(lua_State*, int, LuaMatShader&),
-			void(*ParseTexture)(lua_State*, int, LuaMatTexture&),
-			GLuint(*ParseDisplayList)(lua_State*, int)
-		);
-		void Finalize();
-		void Execute(const LuaMaterial& prev, bool deferredPass) const;
-		void ExecuteInstance(bool deferredPass, const CSolidObject* o, const float2 alpha) const;
-		void Print(const std::string& indent) const;
+	void Parse(
+		lua_State* L,
+		const int tableIdx,
+		void(*ParseShader)(lua_State*, int, LuaMatShader&),
+		void(*ParseTexture)(lua_State*, int, LuaMatTexture&),
+		GLuint(*ParseDisplayList)(lua_State*, int)
+	);
 
-		static int Compare(const LuaMaterial& a, const LuaMaterial& b);
+	void Finalize();
+	void Execute(const LuaMaterial& prev, bool deferredPass) const;
 
-		bool operator <  (const LuaMaterial& m) const { return (Compare(*this, m) <  0); }
-		bool operator == (const LuaMaterial& m) const { return (Compare(*this, m) == 0); }
+	void ExecuteInstanceUniforms(int objId, int objType, bool deferredPass) const;
+	void ExecuteInstanceTeamColor(const float4& tc, bool deferredPass) const { uniforms[deferredPass].ExecuteInstanceTeamColor(tc); }
+	void ExecuteInstanceMatrices(const CMatrix44f& mm, const std::vector<CMatrix44f>& pms, bool deferredPass) const {
+		uniforms[deferredPass].ExecuteInstanceMatrices(mm, pms);
+	}
 
-		bool HasDrawCall() const { return (uuid >= 0); }
+	void Print(const std::string& indent) const;
 
-	public:
-		static constexpr int MAX_TEX_UNITS = 16;
+	static int Compare(const LuaMaterial& a, const LuaMaterial& b);
 
-		// default invalid
-		LuaMatType type = LuaMatType(-1);
+	bool operator <  (const LuaMaterial& m) const { return (Compare(*this, m) <  0); }
+	bool operator == (const LuaMaterial& m) const { return (Compare(*this, m) == 0); }
 
-		int uuid = -1; // user-set unique ID, enables Draw callin
-		int order = 0; // for manually adjusting rendering order
-		int texCount = 0;
+	bool HasDrawCall() const { return (uuid >= 0); }
 
-		// [0] := standard, [1] := deferred
-		LuaMatShader   shaders[LuaMatShader::LUASHADER_PASS_CNT];
-		LuaMatUniforms uniforms[LuaMatShader::LUASHADER_PASS_CNT];
-		LuaMatTexture  textures[MAX_TEX_UNITS];
+public:
+	static constexpr int MAX_TEX_UNITS = 16;
 
-		GLenum cullingMode = 0;
+	// default invalid
+	LuaMatType type = LuaMatType(-1);
 
-		GLuint preList = 0;
-		GLuint postList = 0;
+	int uuid = -1; // user-set unique ID, enables Draw callin
+	int order = 0; // for manually adjusting rendering order
+	int texCount = 0;
 
-		bool useCamera = true;
+	// [0] := standard, [1] := deferred
+	LuaMatShader   shaders[LuaMatShader::LUASHADER_PASS_CNT];
+	LuaMatUniforms uniforms[LuaMatShader::LUASHADER_PASS_CNT];
+	LuaMatTexture  textures[MAX_TEX_UNITS];
 
-		static const LuaMaterial defMat;
+	GLenum cullingMode = 0;
+
+	GLuint preList = 0;
+	GLuint postList = 0;
+
+	bool useCamera = true;
+
+	static const LuaMaterial defMat;
 };
 
 
