@@ -39,6 +39,10 @@ private:
 	static int SetMaterial(lua_State* L);
 	static int SetMaterialLastLOD(lua_State* L);
 	static int SetMaterialDisplayLists(lua_State* L);
+	static int SetDeferredMaterialUniform(lua_State* L);
+	static int SetForwardMaterialUniform(lua_State* L);
+	static int ClearDeferredMaterialUniform(lua_State* L);
+	static int ClearForwardMaterialUniform(lua_State* L);
 
 	static int SetUnitLuaDraw(lua_State* L);
 	static int SetFeatureLuaDraw(lua_State* L);
@@ -71,6 +75,11 @@ public:
 
 		PUSH_FUNCTION(SetMaterialLastLOD);
 		PUSH_FUNCTION(SetMaterialDisplayLists);
+
+		PUSH_FUNCTION(SetDeferredMaterialUniform);
+		PUSH_FUNCTION(SetForwardMaterialUniform);
+		PUSH_FUNCTION(ClearDeferredMaterialUniform);
+		PUSH_FUNCTION(ClearForwardMaterialUniform);
 
 		PUSH_FUNCTION(SetPieceList);
 
@@ -141,6 +150,32 @@ private:
 	static int SetMaterialDisplayLists(lua_State* L) {
 		LuaObjectRenderingImpl::PushObjectType(T);
 		const int ret = LuaObjectRenderingImpl::SetMaterialDisplayLists(L);
+		LuaObjectRenderingImpl::PopObjectType();
+		return ret;
+	}
+
+	static int SetDeferredMaterialUniform(lua_State* L) {
+		LuaObjectRenderingImpl::PushObjectType(T);
+		const int ret = LuaObjectRenderingImpl::SetDeferredMaterialUniform(L);
+		LuaObjectRenderingImpl::PopObjectType();
+		return ret;
+	}
+	static int SetForwardMaterialUniform(lua_State* L) {
+		LuaObjectRenderingImpl::PushObjectType(T);
+		const int ret = LuaObjectRenderingImpl::SetForwardMaterialUniform(L);
+		LuaObjectRenderingImpl::PopObjectType();
+		return ret;
+	}
+
+	static int ClearDeferredMaterialUniform(lua_State* L) {
+		LuaObjectRenderingImpl::PushObjectType(T);
+		const int ret = LuaObjectRenderingImpl::ClearDeferredMaterialUniform(L);
+		LuaObjectRenderingImpl::PopObjectType();
+		return ret;
+	}
+	static int ClearForwardMaterialUniform(lua_State* L) {
+		LuaObjectRenderingImpl::PushObjectType(T);
+		const int ret = LuaObjectRenderingImpl::ClearForwardMaterialUniform(L);
 		LuaObjectRenderingImpl::PopObjectType();
 		return ret;
 	}
